unpackaged/main/default/objects/User/fields/Email_Signature_Temp__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature_Temp__c</fullName>
    <description>This is used in the Update Email Signature flow as a text placeholder for $User.Signature field.</description>
    <inlineHelpText>This signature will be added to your outgoing emails (1333 characters max).</inlineHelpText>
    <label>My Email Signature</label>
    <length>1333</length>
    <type>LongTextArea</type>
</CustomField>