unpackaged/main/default/objects/User/fields/Validation_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Validation_Bypass_DateTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>This date/time field is used in the Update Email Signature flow to capture time stamp when the flow was triggered. Validation Bypass checkbox use this value to calculate the X seconds to set the checkbox to TRUE allowing users to make changes to the User fields for a very limited time frame.</description>
    <label>Validation Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>