unpackaged/main/default/objects/User/validationRules/Only_Admin_can_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_can_edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;FSL System Admin&quot;)</errorConditionFormula>
    <errorMessage>You can&#39;t change these fields. Contact your system administrator</errorMessage>
</ValidationRule>