unpackaged/main/default/objects/User/listViews/MFA_Check.listView-meta.xml
<ListView>
    <fullName>MFA_Check</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAS_AUTHENTICATOR</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_TOTP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MFA Check</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>