unpackaged/main/default/objects/User/listViews/Technicians_with_Dispatcher_Area_Mang.listView-meta.xml
<ListView>
    <fullName>Technicians_with_Dispatcher_Area_Mang</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Technicians - with Dispatcher Area Manager (Read Only)</value>
    </filters>
    <label>Technicians - with Dispatcher Area Mang</label>
</ListView>